# vectordb

./: Cargo.toml  README.md
benches/: bench_maps.rs
src/: lib.rs  loader.rs  main.rs  test.rs
src/vectordb/: entries.rs  mod.rs  util.rs  vdb-bak.rs  vdb.rs
tests/: test.rs
