[package]
name = "vectordb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[[bench]]
name = "bench_maps"
harness = false

[dev-dependencies]
criterion = "0.4.0"

[dependencies]
criterion = "0.4.0"
lazy_static = "1.4.0"
rand = "0.8.5"

